--- a/src/test.html
+++ b/src/test.html
@@ -52,15 +52,50 @@
         btn3.style.backgroundColor = '#e1e1e1';
         btn2.style.backgroundColor = '#e1e1e1';
         btn.style.backgroundColor = 'gray'};
+
+        let isHid = false;
+
+        function oculta(){
+        const btn = document.getElementById('table');
+        const btn2 = document.getElementById('facil');
+        const btn3 = document.getElementById('medio');
+        const btn4 = document.getElementById('dificil');
+        const btn5 = document.getElementById('butmod');
+        const btn6 = document.getElementById('modo');
+        const btn7 = document.getElementById('dificult');
+        const btn8 = document.getElementById('row');
+        isHid = !isHid;
+        
+        if (isHid == true)
+          { btn.style.left = 1600 + "px";
+           btn2.style.left = 1704 + "px";
+           btn3.style.left = 1704 + "px";
+           btn4.style.left = 1704 + "px";
+           btn5.style.left = 1774 + "px";
+           btn6.style.left = 1744 + "px";
+           btn7.style.left = 1784 + "px";
+           btn8.style.left = 1610 + "px";
+        }
+        else
+          {btn.style.left = 1400 + "px";
+           btn2.style.left = 1400 + "px";
+           btn3.style.left = 1400 + "px";
+           btn4.style.left = 1400 + "px";
+           btn5.style.left = 1470 + "px";
+           btn6.style.left = 1440 + "px";
+           btn7.style.left = 1480 + "px";
+           btn8.style.left = 1410 + "px";
+          }
+        }
         
     </script>
-    <div class="table">
-        <text class="row">→</text>
-        <h1 class="dificuldade">DIFICULDADE</h1>
+    <div class="table" id="table">
+        <text class="row" id="row" onclick="oculta()">→</text>
+        <h1 class="dificuldade" id="dificult">DIFICULDADE</h1>
         <button class="fácil" id="facil" onclick="destaca1()">FÁCIL</button>
         <button class="médio" id="medio" onclick="destaca2()">MÉDIO</button>
         <button class="difícil" id="dificil" onclick="destaca3()">DIFÍCIL</button>
-        <h1 class="modo">MODO DE JOGO</h1>
+        <h1 class="modo" id="butmod">MODO DE JOGO</h1>
         <button class="modo" id="modo" onclick="muda_modo()">JOGO NORMAL</button>
     </div>
 </body>
