--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Minadus</title>
-        <link rel="shortcut icon" href="./logo.svg" type="image/svg" />
+        <link rel="icon" href="/favicon.gif" type="image/gif" />
     </head>
     <body>
         <div id="root"></div>
